--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </a>
           </div>
 
-          <div class="hero-stats reveal reveal-delay-5">
+          <!-- <div class="hero-stats reveal reveal-delay-5">
             <div class="stat-item">
               <span class="stat-num">2+</span>
               <span class="stat-label">Years Learning</span>
@@ -97,14 +97,14 @@
               <span class="stat-label">Technologies</span>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Right: Floating Card -->
         <div class="hero-visual" aria-hidden="true">
           <div class="glass-strong hero-card">
             <div class="hero-card-glow"></div>
             <div class="hero-card-avatar">
-                <img src="images/Deepthi_A.png" alt="Deepthi Addanki">
+                <img src="Deepthi_A.png" alt="Deepthi Addanki">
             </div>
             <p class="hero-card-name">Deepthi Addanki</p>
             <p class="hero-card-role">Full Stack Dev · ML Engineer</p>
