--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
             </a>
           </div>
 
-          <!-- <div class="hero-stats reveal reveal-delay-5">
+          <div class="hero-stats reveal reveal-delay-5">
             <div class="stat-item">
-              <span class="stat-num">2+</span>
-              <span class="stat-label">Years Learning</span>
+              <span class="stat-num"></span>
+              <span class="stat-label"></span>
             </div>
             <div class="stat-item">
-              <span class="stat-num">10+</span>
-              <span class="stat-label">Projects Built</span>
+              <span class="stat-num"></span>
+              <span class="stat-label"></span>
             </div>
             <div class="stat-item">
-              <span class="stat-num">5+</span>
-              <span class="stat-label">Technologies</span>
+              <span class="stat-num"></span>
+              <span class="stat-label"></span>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <!-- Right: Floating Card -->
         <div class="hero-visual" aria-hidden="true">
