--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <aside>
           <div class="glass-strong about-photo-card reveal">
             <div class="hero-card-avatar">
-                <img src="images/Deepthi_A.png" alt="Deepthi Addanki">
+                <img src="Deepthi_A.png" alt="Deepthi Addanki">
             </div>
             <h2 class="about-name-card">Deepthi Addanki</h2>
             <p class="about-title-card">AI &amp; Data Science Engineer · Full Stack Developer</p>
