--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Deepthi Addanki" />
   <title>About — Deepthi Addanki</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👩‍💻</text></svg>" />
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>" />
 </head>
 <body>
 
@@ -31,10 +31,10 @@
 
 <div class="nav-mobile" id="navMobile">
   <ul role="list">
-    <li><a href="index.html"    data-nav>🏠 Home</a></li>
-    <li><a href="about.html"    data-nav>👩‍💻 About</a></li>
-    <li><a href="projects.html" data-nav>🚀 Projects</a></li>
-    <li><a href="contact.html"  data-nav>📬 Contact</a></li>
+    <li><a href="index.html"    data-nav>Home</a></li>
+    <li><a href="about.html"    data-nav>About</a></li>
+    <li><a href="projects.html" data-nav>Projects</a></li>
+    <li><a href="contact.html"  data-nav>Contact</a></li>
   </ul>
 </div>
 
@@ -371,8 +371,7 @@
 <footer>
   <div class="container footer-inner">
     <span class="footer-logo">Deepthi Addanki</span>
-    <span class="footer-copy">© 2025 · Crafted with passion in Hyderabad</span>
-    <div class="footer-links">
+     <div class="footer-links">
       <a href="https://www.linkedin.com/in/deepthi-addanki/" target="_blank" rel="noopener noreferrer" class="social-btn" aria-label="LinkedIn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"/><circle cx="4" cy="4" r="2"/></svg>
       </a>
