--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta property="og:title" content="Deepthi Addanki — Full Stack Developer" />
   <meta property="og:description" content="Passionate about building scalable and intelligent software solutions." />
   <meta property="og:type" content="website" />
-  <title>Deepthi Addanki — Full Stack Developer</title>
+  <title>Deepthi Addanki</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👩‍💻</text></svg>" />
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>" />
 </head>
 <body>
 
@@ -38,10 +38,10 @@
 <!-- Mobile Drawer -->
 <div class="nav-mobile" id="navMobile" aria-hidden="true">
   <ul role="list">
-    <li><a href="index.html"    data-nav>🏠 Home</a></li>
-    <li><a href="about.html"    data-nav>👩‍💻 About</a></li>
-    <li><a href="projects.html" data-nav>🚀 Projects</a></li>
-    <li><a href="contact.html"  data-nav>📬 Contact</a></li>
+    <li><a href="index.html"    data-nav>Home</a></li>
+    <li><a href="about.html"    data-nav>About</a></li>
+    <li><a href="projects.html" data-nav>Projects</a></li>
+    <li><a href="contact.html"  data-nav>Contact</a></li>
   </ul>
 </div>
 
