--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,10 @@
 
 <div class="nav-mobile" id="navMobile">
   <ul role="list">
-    <li><a href="index.html"    data-nav>🏠 Home</a></li>
-    <li><a href="about.html"    data-nav>👩‍💻 About</a></li>
-    <li><a href="projects.html" data-nav>🚀 Projects</a></li>
-    <li><a href="contact.html"  data-nav>📬 Contact</a></li>
+    <li><a href="index.html"    data-nav>Home</a></li>
+    <li><a href="about.html"    data-nav>About</a></li>
+    <li><a href="projects.html" data-nav>Projects</a></li>
+    <li><a href="contact.html"  data-nav>Contact</a></li>
   </ul>
 </div>
 
