--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact Deepthi Addanki — AI & Data Science Engineer based in Hyderabad. Connect via LinkedIn, GitHub, or Email." />
   <meta name="author" content="Deepthi Addanki" />
-  <title>Contact — Deepthi Addanki</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👩‍💻</text></svg>" />
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'></text></svg>" />
 </head>
 <body>
 
@@ -31,10 +31,10 @@
 
 <div class="nav-mobile" id="navMobile">
   <ul>
-    <li><a href="index.html" data-nav>🏠 Home</a></li>
-    <li><a href="about.html" data-nav>👩‍💻 About</a></li>
-    <li><a href="projects.html" data-nav>🚀 Projects</a></li>
-    <li><a href="contact.html" data-nav>📬 Contact</a></li>
+    <li><a href="index.html" data-nav>Home</a></li>
+    <li><a href="about.html" data-nav>About</a></li>
+    <li><a href="projects.html" data-nav>Projects</a></li>
+    <li><a href="contact.html" data-nav>Contact</a></li>
   </ul>
 </div>
 
