--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
               <svg width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
               View Projects
             </a>
-           <a href="resume.pdf" target="_blank" class="btn btn-gold">
-              <svg width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
-              View Resume
+          <a href="resume.pdf" target="_blank" class="btn btn-gold">
+            <svg width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <path d="M15 3h6v6M10 14L21 3M4 5v14h14"/>
+            </svg>
+           View Resume
             </a>
           </div>
             
