--- a/about.html
+++ b/about.html
@@ -99,12 +99,12 @@
                   <polyline points="22,6 12,13 2,6"/>
                 </svg>
               </a>
-              <a href="resume.pdf" download
-                 class="social-btn" aria-label="Download Resume" title="Download Resume">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                  <path d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/>
-                </svg>
-              </a>
+             <a href="resume.pdf" target="_blank" class="btn btn-gold">
+            <svg width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <path d="M15 3h6v6M10 14L21 3M4 5v14h14"/>
+            </svg>
+           View Resume
+            </a>
             </div>
           </div>
         </aside>
@@ -134,10 +134,10 @@
               <svg width="15" height="15" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
               View My Work
             </a>
-            <a href="resume.pdf" download class="btn btn-glass">
+            <!-- <a href="resume.pdf" download class="btn btn-glass">
               <svg width="15" height="15" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
               Download Resume
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
